fix arrow down not showing, organize work page images

--- a/css/section.css
+++ b/css/section.css
@@ -106,7 +106,7 @@
 
 
 .parallax {
-	background-image: url("/assets/images/homepage.svg");
+	background-image: url("/assets/images/work/homepage.svg");
 	min-height: 100vh;
 	width: 100%;
 	background-attachment: fixed;
